--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Rocket<span>Pizzas</span></h1>
         <P>Aberto todos os dias. 8h - 21h</P>
         <section>
-            <a href=""><img class="logo"  src="imagens/inst2.png" alt=""></a>
+            <a href=""><img class="logo"  src="./Imagens/inst2.png" alt=""></a>
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            <span><a href=""><img class="logo" src="imagens/wpp2.png" alt=""></a></span>
+            <span><a href=""><img class="logo" src="./Imagens/wpp2.png" alt=""></a></span>
          </section>
     </header>
     <main>
