--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          </section>
     </header>
     <main>
-        <section class="fundo"> <!--PIZZAS-->
+        <section class="fundo"> <!--TAMANHOS-->
             <h2>TAMANHOS</h2>
             <ul>
                 <li>
@@ -56,7 +56,7 @@
                     </div>
 
                     <strong class="price">
-                        25,00
+                        44,90
                     </strong>
                 </li>
 
@@ -69,7 +69,7 @@
                     </div>
 
                     <strong class="price">
-                        25,00
+                        54,90
                     </strong>
                 </li>
             </ul>
